# Flash3DTransformer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
LICENSES/: Flash3D_LICENSE
doc/: build_docker.md  modelwise_profiling.md  profiling.md  two_stage_atomicInc.md  unit_tests.md
docker/: Dockerfile  install_deps.sh
flash3dxfmr/: __init__.py
flash3dxfmr/layers/: __init__.py  buck_swin.py  elem_wise.py  flash3d.py  hourglass.py  point.py  pooling.py  psh_ops.py  stage.py  unpool.py
flash3dxfmr/psh/: __init__.py  arithmatic.py  batching.py  bucket.py  bucket_attn.py  bucket_ops.py  bucket_scope.py  debug.py  dev_context.py  psh_main.py  subbuck.py  swin_attn.py
profiling/: analyze_metrics.py  instrumentation.sh  metric_stats.sql  run_attn_fwd.py
src/: f3d_frontend.cu
src/common/: arithmetic.cuh  block_minmax.cuh  device_manager.cu  device_manager.cuh  fp_types.cuh  kernel_dispatcher.cu  kernel_dispatcher.cuh  load_store.cuh  load_store_async.cuh  rand.cuh  runtime.cpp  runtime.h
src/psh/: additive_unpool.cuh  additive_unpool_dispatcher.cu  batch_psh_bucket.cuh  batch_psh_bucket_dispatcher.cu  batch_psh_subbuck_reduce.cuh  batch_psh_subbuck_reduce_bwd.cuh  batch_subbuck_pooling_bwd_dispatcher.cu  batch_subbuck_pooling_dispatcher.cu  bucket_dispatcher.cuh  bucket_sanitizer_cpu.cpp  gemm.cuh  gemm_dispatcher.cu  hash_fns.cuh  psh_bucket.cu  psh_label.cu  rand_gen.cu  shmem_bitset_counter.cuh  shmem_cumsum_counter.cuh  two_stage_counter.cuh
tests/: test_attn_bwd.py  test_attn_fwd.py  test_gemm.py  test_lib.py  test_pooling.py  test_psh.py  test_psh_hourglass.py  test_subbuck_bwd.py  test_subbuck_reduce.py  test_unpooling.py
